Fix form select field overlap, missing light icon
Fixes issue number 2 from #22

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -2471,7 +2471,7 @@ body.search-open {
   background-color: rgba(0, 0, 0, 0.1);
 }
 .content-formatted .form_field_select {
-  padding: 7px 9px 6px 9px;
+  padding: 7px 20px 6px 9px;
   text-indent: .01px;
   text-overflow: '';
   background-position: 97.5% 13px;
@@ -2483,7 +2483,10 @@ body.search-open {
   background-image: url("../images/ico-arrow-down.png");
 }
 .svg .content-formatted .form_field_select {
-  background-image: url("../images/ico-arrow-down.png");
+  background-image: url("../assets/ico-arrow-down.svg");
+}
+.svg .light-background .content-formatted .form_field_select {
+  background-image: url("../assets/ico-arrow-down-white.svg");
 }
 .content-formatted .form_field_checkbox,
 .content-formatted .form_field_radio {
