--- a/stylesheets/scss/_forms.scss
+++ b/stylesheets/scss/_forms.scss
@@ -123,7 +123,7 @@
   }
 
   .form_field_select {
-    padding: 7px 9px 6px 9px;
+    padding: 7px 20px 6px 9px;
     text-indent: .01px;
     text-overflow: '';
     background-position: 97.5% 13px;
@@ -136,7 +136,11 @@
     }
 
     .svg & {
-      background-image: url('../images/ico-arrow-down.png');
+      background-image: url('../assets/ico-arrow-down.svg');
+    }
+
+    .svg .light-background & {
+      background-image: url('../assets/ico-arrow-down-white.svg');
     }
   }
 
